tket2/src/llvm/snapshots/tket2__llvm__bool__test__emit_all_ops@llvm14_3.snap
---
source: tket2/src/llvm/bool.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define i1 @_hl.main.1(i1 %0) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %1 = xor i1 %0, true
  ret i1 %1
}
