tket2/src/llvm/snapshots/tket2__llvm__bool__test__emit_all_ops@pre-mem2reg@llvm14_7.snap
---
source: tket2/src/llvm/bool.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define i1 @_hl.main.1(i1 %0, i1 %1) {
alloca_block:
  %"0" = alloca i1, align 1
  %"2_0" = alloca i1, align 1
  %"2_1" = alloca i1, align 1
  %"4_0" = alloca i1, align 1
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i1 %0, i1* %"2_0", align 1
  store i1 %1, i1* %"2_1", align 1
  %"2_01" = load i1, i1* %"2_0", align 1
  %"2_12" = load i1, i1* %"2_1", align 1
  %2 = icmp eq i1 %"2_01", %"2_12"
  store i1 %2, i1* %"4_0", align 1
  %"4_03" = load i1, i1* %"4_0", align 1
  store i1 %"4_03", i1* %"0", align 1
  %"04" = load i1, i1* %"0", align 1
  ret i1 %"04"
}
